<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/pink">
 <requestFocus />

 <TextView
     android:id="@+id/email"
     android:layout_width="148dp"
     android:layout_height="wrap_content"
   
     android:layout_margin="10dp"
     android:textSize="25sp"
     android:textColor="@color/black"
     android:text="@string/tv"/>

 <EditText
     android:id="@+id/editText2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ems="10"
     android:inputType="textPersonName" />
 
 <TextView
     android:id="@+id/password"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/password"
     android:textSize="25sp"
     android:textColor="@color/black"
    
     android:layout_margin="10dp"/>

 <EditText
     android:id="@+id/editText1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ems="10"
     android:inputType="textPassword" />

 <Button
     android:id="@+id/submit"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:textColor="@color/black"
     android:text="@string/buttonSubmit" />
  

 <Button
     android:id="@+id/Cancel"
     android:layout_margin="10dp"
      android:textColor="@color/black"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/buttonCancel"
     />
</LinearLayout>
