<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/violet" >

    <TextView
        android:id="@+id/numberone"
        android:background="@color/darkgrey"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Textviewnumberone" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/numbertwo"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:background="@color/darkgrey"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/Textviewnumbertwo" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/darkgrey"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/Textviewresult" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

</LinearLayout>
